# heterarch

./: .mtn-ignore  Makefile.am  TODO.txt  configure.ac  release-expand.config
NewContent-tex/: NewContent-tex.tex  descriptor.yml
NewDocument/: NewDocument.tex  descriptor.yml
cron-job/: cron-job.tex  descriptor.yml
form_library/: Makefile.am
form_library/FormLibrary/: Access.pm  DefaultFormType.pm  FormType.pm  LogFormType.pm  StaticFormType.pm  TableFormType.pm  Transform.pm  TreeFormType.pm  Utility.pm  Workflow.pm
heterarch-developer-content/: descriptor.yml  heterarch-developer-content.tex
heterarch-developer-content/figures/: heterarch-developer-content-gui.eps  neurospaces-developer-management-console.eps
heterarch-homepage/: descriptor.yml  heterarch-homepage.tex
heterarch-overview/: descriptor.yml  heterarch-overview.tex
install/rpm/: heterarch.spec
installation-ubuntu-bionic/: descriptor.yml  installation-ubuntu-bionic.tex
installation-ubuntu-focal/: descriptor.yml  installation-ubuntu-focal.tex
installation-ubuntu-impish/: descriptor.yml  installation-ubuntu-impish.tex
installation-ubuntu-precise/: descriptor.yml  installation-ubuntu-precise.tex
installation-ubuntu-raring/: installation-ubuntu-raring.tex
installation-ubuntu-xenial/: descriptor.yml  installation-ubuntu-xenial.tex
perl/: Makefile.am
perl/Neurospaces/: Documentation.pm
poetical/: Makefile.am
poetical/Poetical/: Access.pm  DefaultFormType.pm  FormType.pm  LogFormType.pm  StaticFormType.pm  TableFormType.pm  Transform.pm  TreeFormType.pm  Utility.pm  Workflow.pm
project-todo/: descriptor.yml  project-todo.tex
python/neurospaces/: __cbi__.py
version-control/: descriptor.yml  repo-version-control  version-control.tex  version-control.txt
version-control/figures/: heterarch-monotone.eps
