
# note that this is currently specific to webmin.

webminscriptdir=/usr/share/webmin

nobase_dist_webminscript_SCRIPTS = \
	FormLibrary/Access.pm \
	FormLibrary/DefaultFormType.pm \
	FormLibrary/FormType.pm \
	FormLibrary/FormType/Encapsulators/Library/ACS.pm \
	FormLibrary/FormType/Encapsulators/Library/Satcom.pm \
	FormLibrary/FormType/Encapsulators/Library/Sems.pm \
	FormLibrary/FormType/Encapsulators/Library/Standard.pm \
	FormLibrary/FormType/Encapsulators/Library/Telecom.pm \
	FormLibrary/FormType/Encapsulators/Library/Webmin/Net.pm \
	FormLibrary/FormType/Encapsulators/Logic/Library/Standard.pm \
	FormLibrary/FormType/Encapsulators/Validators/Library/Standard.pm \
	FormLibrary/FormType/Encapsulators/Validators/Library/Telecom.pm \
	FormLibrary/LogFormType.pm \
	FormLibrary/Utility.pm \
	FormLibrary/StaticFormType.pm \
	FormLibrary/TableFormType.pm \
	FormLibrary/Transform.pm \
	FormLibrary/TreeFormType.pm \
	FormLibrary/Workflow.pm

