##
## content-framework: a content publication framework based on the
## genesis 3 documentation system.
##

##############################################################################
##'
##' content-framework
##'
##' Copyright (C) 2009-2011 Hugo Cornelis
##'
##' Hugo Cornelis, hugo.cornelis@gmail.com
##'
##############################################################################

perldir = @PMDIR@

nobase_dist_perl_DATA = @PERL_MODULES@

perldatadir = $(prefix)/neurospaces/content-framework

nobase_dist_perldata_DATA = @PERL_DATA@

