
# note that this is currently specific to webmin.

webminscriptdir=/usr/share/webmin

nobase_dist_webminscript_SCRIPTS = \
	Poetical/Access.pm \
	Poetical/DefaultFormType.pm \
	Poetical/FormType.pm \
	Poetical/FormType/Encapsulators/Library/ACS.pm \
	Poetical/FormType/Encapsulators/Library/Satcom.pm \
	Poetical/FormType/Encapsulators/Library/Sems.pm \
	Poetical/FormType/Encapsulators/Library/Standard.pm \
	Poetical/FormType/Encapsulators/Library/Telecom.pm \
	Poetical/FormType/Encapsulators/Library/Webmin/Net.pm \
	Poetical/FormType/Encapsulators/Logic/Library/Standard.pm \
	Poetical/FormType/Encapsulators/Validators/Library/Standard.pm \
	Poetical/FormType/Encapsulators/Validators/Library/Telecom.pm \
	Poetical/LogFormType.pm \
	Poetical/Utility.pm \
	Poetical/StaticFormType.pm \
	Poetical/TableFormType.pm \
	Poetical/Transform.pm \
	Poetical/TreeFormType.pm \
	Poetical/Workflow.pm

